# Antigreedy_a2a

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  prompt_plan.md  pyproject.toml
.claude/: settings.json
antigreedy/: __init__.py  a2a_adapter.py  a2a_http.py  a2a_meeting.py  backends.py  bench.py  caste_metrics.py  events.py  gate.py  metrics.py  protocol.py  recorder.py  turnsource.py
docs/: PRD.md  caste_report.html  design_identity_dao.md  elder_report.html  external_review.md  gate_calibration.md  paper_draft.md  paper_draft_ko.md  paper_report.html  peer_review.md  phase_d_report.html  probe_detection.md  qv_report.html  re_review.md  related_work.md  research_1.md  research_2.md  research_2_results.md  shaper_measurement.md  slides.html  social_strategies_report.md  unified_report.html  verify_attack.json  verify_attack_full.json  verify_attack_refill.json  verify_caste_lambda.json  verify_caste_lambda.md  verify_elder.json  verify_elder.md  verify_litmus_n8.json  verify_phase_d.json  verify_phase_d.md  verify_phase_d_placebo.json  verify_phase_d_placebo.md  verify_phase_d_placebo_n6.json  verify_qv.json  verify_qv.md  verify_qv_refill.json  verify_results.md  verify_unified.json  (+7 more)
policies/: 00_example_allow.py  10_airtime_quota.py
scripts/: build_caste_report.py  build_elder_report.py  build_paper_html.py  build_phase_d_report.py  build_qv_report.py  build_slides.py  build_unified_report.py  build_welfare_report.py  measure_shapers.py  verify_claims.py
tests/: test_a2a_adapter.py  test_a2a_e2e.py  test_a2a_meeting.py  test_bench.py  (+40 more)
(+44 files in other folders)
