[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antigreedy-a2a"
version = "0.1.0"
description = "Testbed for governing selfish exploitation (behavioral greedy) in A2A multi-agent systems"
requires-python = ">=3.10"
dependencies = ["watchfiles>=0.21", "httpx>=0.27"]

[project.optional-dependencies]
a2a = ["a2a-sdk>=1.1,<2", "uvicorn>=0.30", "starlette>=0.37", "sse-starlette>=2.0"]
dashboard = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "websockets>=12"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["antigreedy*"]

[tool.setuptools.package-data]
"antigreedy.dashboard" = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
